# jupyter-research

./: .gitignore  A_download_funding.ipynb  A_download_kline.ipynb  A_download_trade.ipynb  LICENSE  M_relative.ipynb  M_statistics.ipynb  README.md  pyproject.toml  relative-performance.ipynb
notebooks/: 1_data_gathering.ipynb  2_relative_performance.ipynb  A_download_kline.ipynb  A_download_trade.ipynb  bayes-probability.ipynb  exchanges.py  models.py  relative-performance.ipynb
toolkit/: exchanges.py  models.py  probabilities.py  utils.py
