[tool.poetry]
name = "jupyter-research"
version = "0.1.0"
description = "Researching and analyzing current market conditions and behaviours with Jupyter."
authors = ["bullbearpanda <bullbearpanda.public@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bullbearpanda/jupyter-research"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
jupyter = "^1.0.0"
plotly = "^5.14.1"
yfinance = "^0.2.18"
pydantic = "^1.10.7"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
